--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,13 +5,16 @@
       <div class="col-38">
 
           <div class="section-heading">
-              <h1>A FREE AND SIMPLE LANDING PAGE</h1>
-              <h2>Namari is a free landing page template you can use for your projects. It is free to use for your
-                  personal and commercial projects, enjoy!</h2>
+              <h1>WELCOME TO PARACORD CTRL.</h1>
+              <h2>สวัสดีครับ 🙏🏿
+                มองหาอะไรใส่ข้อมืออยู่รึเปล่า 
+                ถ้าใช่คุณมาถูกทางแล้วครับ
+                มาค้นหาสไตล์ของคุณเองไปกับเรา 
+                บอกตัวตนที่เป็นคุณผ่านกำไล 1 เส้นที่คุณสามารถออกแบบเองได้ในราคาที่สามารถหยิบจับได้โดยที่กระเป๋าไม่สั่นแน่นอนครับ</h2>
           </div>
 
           <!--Call to Action-->
-          <a href="#" class="button">START CREATING TODAY</a>
+          <a href="#" class="button">GO TO PRODUCT</a>
           <!--End Call to Action-->
 
       </div>
