add gallery and about and product

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
           </div>
 
           <!--Call to Action-->
-          <a href="#" class="button">GO TO PRODUCT</a>
+          <a href="#" class="button" (click)="next()">GO TO PRODUCT</a>
           <!--End Call to Action-->
 
       </div>
