--- a/src/app/intro/intro.component.html
+++ b/src/app/intro/intro.component.html
@@ -1,84 +1,55 @@
-<!--Introduction-->
-<section id="about" class="introduction scrollto">
+<!--Content Section-->
+<div id="services" class="scrollto clearfix">
 
-  <div class="row clearfix">
-
-      <div class="col-3">
-          <div class="section-heading">
-              <h3>SUCCESS</h3>
-              <h2 class="section-title">How We Help You To Sell Your Product</h2>
-              <p class="section-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                  eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam!</p>
-          </div>
-
-      </div>
-
-      <div class="col-2-3">
-
-          <!--Icon Block-->
-          <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.1s">
-              <!--Icon-->
-              <div class="icon">
-                  <i class="fa fa-html5 fa-2x"></i>
-              </div>
-              <!--Icon Block Description-->
-              <div class="icon-block-description">
-                  <h4>HTML5 &amp; CSS3</h4>
-                  <p>Has ne tritani atomorum conclusionemque, in dolorum volumus cotidieque eum. At vis choro
-                      neglegentur iudico</p>
-              </div>
-          </div>
-          <!--End of Icon Block-->
-
-          <!--Icon Block-->
-          <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.3s">
-              <!--Icon-->
-              <div class="icon">
-                  <i class="fa fa-bolt fa-2x"></i>
-              </div>
-              <!--Icon Block Description-->
-              <div class="icon-block-description">
-                  <h4>Easy to Use</h4>
-                  <p>Cu vero ipsum vim, doctus facilisi sea in. Eam ex falli honestatis repudiandae, sit
-                      detracto mediocrem disputationi</p>
-              </div>
-          </div>
-          <!--End of Icon Block-->
-
-          <!--Icon Block-->
-          <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
-              <!--Icon-->
-              <div class="icon">
-                  <i class="fa fa-tablet fa-2x"></i>
-              </div>
-              <!--Icon Block Description-->
-              <div class="icon-block-description">
-                  <h4>Fully Responsive</h4>
-                  <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
-                      nemore vivendum</p>
-              </div>
-          </div>
-          <!--End of Icon Block-->
-
-          <!--Icon Block-->
-          <div class="col-2 icon-block icon-top wow fadeInUp" data-wow-delay="0.5s">
-              <!--Icon-->
-              <div class="icon">
-                  <i class="fa fa-rocket fa-2x"></i>
-              </div>
-              <!--Icon Block Description-->
-              <div class="icon-block-description">
-                  <h4>Parallax Effect</h4>
-                  <p>Id porro tritani recusabo usu, eum intellegam consequuntur et. Fugit debet ea sit, an pro
-                      nemore vivendum</p>
-              </div>
-          </div>
-          <!--End of Icon Block-->
-
-      </div>
-
+    <div class="row no-padding-bottom clearfix">
+  
+  
+        <!--Content Left Side-->
+        <div class="col-3">
+            <!--User Testimonial-->
+            <blockquote class="testimonial text-right bigtest">
+                <q>สวัสดีครับ🙏🏿 ยินดีตอนรับเข้าสู่ร้านของเราครับ สินค้าที่ร้านเป็นงาน handmade สั่งทำได้
+                    วัสดุของเราคือเชือก paracord 550 หลากหลายสีให้เลือกได้ตามใจชอบเลยครับ 
+                </q>
+                <footer>— Paracord Ctrl</footer>
+            </blockquote>
+            <p><img src="../assets/images/dancer-1.jpg" alt="Dancer"/></p>
+            <!-- End of Testimonial-->
+  
+        </div>
+        <!--End Content Left Side-->
+  
+        <!--Content of the Right Side-->
+        <div class="col-3">
+            <div class="section-heading">
+                <h3>มันดียังไง? ไปดูกันครับ</h3>
+                <h2 class="section-title">เชือกพาราคอร์ด 550 คือ?</h2>
+                <p class="section-subtitle">หลายคนคงสงสัยว่าเชือกพาราคอร์ด (Paracord) คืออะไร บางที่จะเรียก Paracord 550 หรือ Type-III paracord</p>
+        </div>
+            <p>เชือกพาราคอร์ดทำมาจาก ไนลอนที่มีน้ำหนักเบา เดิมที่จะใช้สำหรับการโดดร่ม และเนื่องจากเชือกนี้สามารถใช้ประโยชน์อื่นๆได้อีกเยอะ ทางการทหารจึงนิยมใช้เชือกนี้ และใช้อย่างแพร่หลายในปัจจุบัน
+                ยกตัวอย่างที่ทหารใช้กันเยอะคือเอามาพันด้ามมีด เพราะเวลาเข้าป่า หรือเกิดเหตุฉุกเฉินสามารถแกะเชือกออกมาใช้ได้ เลยมีอีกชื่อที่เรียกว่า Survival Paracord หรือเชือกยังชีพ
+            </p>
+            <p>
+                เชือกพาราคอร์ดจะมีหลายประเภท (Type) แต่นี่นิยมนำมาใช้ในตลาดคือ Type III เลข 550 หลายถึงสามารถรองรับน้ำหนักได้ถึง 500 ปอร์น หรือประมาณ 250 กิโลกรัม ซึ่งจะเห็นว่าแข็งแรงมากๆ และยากที่จะขาดได้ ข้างในจะประกอบไปด้วยเชือกขาว 7 เส้น
+                
+            </p>
+            <p><img src="../assets/images/about-images/img-1.png" alt="Dancer"/></p>
+            <p>
+                ด้วยความที่เชือกพาราคอร์ดมีความแข็งแรง ทนทาน ยืดหยุ่น มากจึงมีการทำมาใช้ประโยชน์หลายแบบอย่างเช่น   ด้ามมีด, สายคล้องปืน,  พวงกุญแจ,  สายคล้องกล้อง และสายข้อมือ paracord จะเป็นที่นิยมมาก เนื่องจากทำให้ได้หลายแบบ หลายสี  
+            </p>
+            <!-- Just replace the Video ID "UYJ5IjBRlW8" with the ID of your video on YouTube (Found within the URL) -->
+            <!--<a href="#" data-videoid="UYJ5IjBRlW8" data-videosite="youtube" class="button video link-lightbox">
+                WATCH VIDEO <i class="fa fa-play" aria-hidden="true"></i>
+            </a> -->
+        </div>
+        <!--End Content Right Side-->
+  
+        <div class="col-3">
+            <img src="../assets/images/dancer.jpg" alt="Dancer"/>
+        </div>
+  
+    </div>
+  
+  
   </div>
-
-
-</section>
-<!--End of Introduction-->
+  <!--End of Content Section-->
