--- a/src/app/social/social.component.html
+++ b/src/app/social/social.component.html
@@ -2,18 +2,13 @@
   <!--Social Icons in Header-->
   <ul class="social-icons">
       <li>
-          <a target="_blank" title="Facebook" href="https://www.facebook.com/username">
+          <a target="_blank" title="Facebook" href="https://www.facebook.com/paracord.ctrl">
               <i class="fa fa-facebook fa-1x"></i><span>Facebook</span>
           </a>
       </li>
       <li>
-          <a target="_blank" title="Instagram" href="http://www.instagram.com/username">
+          <a target="_blank" title="Instagram" href="https://www.instagram.com/paracord.ctrl">
               <i class="fa fa-instagram fa-1x"></i><span>Instagram</span>
-          </a>
-      </li>
-      <li>
-          <a target="_blank" title="behance" href="http://www.behance.net">
-              <i class="fa fa-behance fa-1x"></i><span>Behance</span>
           </a>
       </li>
   </ul>
