--- a/src/app/testimonial/testimonial.component.html
+++ b/src/app/testimonial/testimonial.component.html
@@ -5,38 +5,80 @@
 
       <div class="section-heading">
           <h3>FEEDBACK</h3>
-          <h2 class="section-title">What our customers are saying</h2>
+          <h2 class="section-title">PARACORD CTRL THE PRODUCT</h2>
       </div>
 
       <!--User Testimonial-->
-      <blockquote class="col-3 testimonial classic">
-          <img src="../assets/images/user-images/user-1.jpg" alt="User"/>
-          <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-              labore
-              et dolore magna aliqua</q>
-          <footer>John Doe - Happy Customer</footer>
+      <blockquote class="col-3 ">
+          <img src="../assets/images/product-images/pd-1.jpg" alt="User"/>
+          <b>Price 200 baht</b>
+          <footer><q>gray - dark green</q></footer>
       </blockquote>
       <!-- End of Testimonial-->
 
       <!--User Testimonial-->
-      <blockquote class="col-3 testimonial classic">
-          <img src="../assets/images/user-images/user-2.jpg" alt="User"/>
-          <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-              labore
-              et dolore magna aliqua</q>
-          <footer>Roslyn Doe - Happy Customer</footer>
+      <blockquote class="col-3 ">
+          <img src="../assets/images/product-images/pd-2.jpg" alt="User"/>
+          <b>Price 200 baht</b>
+          <footer><q>black - black mix</q></footer>
       </blockquote>
       <!-- End of Testimonial-->
 
       <!--User Testimonial-->
-      <blockquote class="col-3 testimonial classic">
-          <img src="../assets/images/user-images/user-3.jpg" alt="User"/>
-          <q>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-              labore
-              et dolore magna aliqua</q>
-          <footer>Thomas Doe - Happy Customer</footer>
+      <blockquote class="col-3 ">
+          <img src="../assets/images/product-images/pd-3.jpg" alt="User"/>
+          <b>Price 200 baht</b>
+          <footer><q>black - black mix</q></footer>
       </blockquote>
       <!-- End of Testimonial-->
+
+      <!--User Testimonial-->
+      <blockquote class="col-3 ">
+        <img src="../assets/images/product-images/pd-4.jpg" alt="User"/>
+        <b>Price 200 baht</b>
+        <footer><q>black - red mix</q></footer>
+    </blockquote>
+    <!-- End of Testimonial-->
+
+    <!--User Testimonial-->
+    <blockquote class="col-3 ">
+        <img src="../assets/images/product-images/pd-5.jpg" alt="User"/>
+        <b>Price 200 baht</b>
+        <footer><q>black - red mix</q></footer>
+    </blockquote>
+    <!-- End of Testimonial-->
+
+    <!--User Testimonial-->
+    <blockquote class="col-3 ">
+        <img src="../assets/images/product-images/pd-6.jpg" alt="User"/>
+        <b>Price 200 baht</b>
+        <footer><q>black</q></footer>
+    </blockquote>
+    <!-- End of Testimonial-->
+
+    <!--User Testimonial-->
+    <blockquote class="col-3 ">
+        <img src="../assets/images/product-images/pd-7.jpg" alt="User"/>
+        <b>Price 200 baht</b>
+        <footer><q>black - gray</q></footer>
+    </blockquote>
+    <!-- End of Testimonial-->
+
+    <!--User Testimonial-->
+    <blockquote class="col-3 ">
+        <img src="../assets/images/product-images/pd-8.jpg" alt="User"/>
+        <b>Price 200 baht</b>
+        <footer><q>black - red brown</q></footer>
+    </blockquote>
+    <!-- End of Testimonial-->
+
+    <!--User Testimonial-->
+    <blockquote class="col-3 ">
+        <img src="../assets/images/product-images/pd-9.jpg" alt="User"/>
+        <b>Price 200 baht</b>
+        <footer><q>gray - red mix</q></footer>
+    </blockquote>
+    <!-- End of Testimonial-->
 
   </div>
 
