--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -2,18 +2,54 @@
 <aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-gallery
 data-featherlight-filter="a">
 
-<a href="../assets/images/gallery-images/gallery-image-1.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.1s"><img src="../assets/images/gallery-images/gallery-image-1.jpg" alt="Landing Page"/></a>
-<a href="../assets/images/gallery-images/gallery-image-2.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.3s"><img src="../assets/images/gallery-images/gallery-image-2.jpg" alt="Landing Page"/></a>
-<a href="../assets/images/gallery-images/gallery-image-3.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.5s"><img src="../assets/images/gallery-images/gallery-image-3.jpg" alt="Landing Page"/></a>
-<a href="../assets/images/gallery-images/gallery-image-4.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="1.1s"><img src="../assets/images/gallery-images/gallery-image-4.jpg" alt="Landing Page"/></a>
-<a href="../assets/images/gallery-images/gallery-image-5.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.9s"><img src="../assets/images/gallery-images/gallery-image-5.jpg" alt="Landing Page"/></a>
-<a href="../assets/images/gallery-images/gallery-image-6.jpg" data-featherlight="image" class="col-3 wow fadeIn"
-  data-wow-delay="0.7s"><img src="../assets/images/gallery-images/gallery-image-6.jpg" alt="Landing Page"/></a>
+<div class="section-heading">
+  <h3>ART SPACES</h3>
+  <h2 class="section-title">P A R A C O R D  -  S T U D i O</h2>
+  <p class="section-subtitle"></p>
+</div>
+
+
+<a href="../assets/images/paracord-images/image-1.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.1s"><img src="../assets/images/paracord-images/image-1.jpg" alt="Landing Page"/></a>
+<a href="../assets/images/paracord-images/image-2.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.3s"><img src="../assets/images/paracord-images/image-2.jpg" alt="Landing Page"/></a>
+<a href="../assets/images/paracord-images/image-3.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.5s"><img src="../assets/images/paracord-images/image-3.jpg" alt="Landing Page"/></a>
+  
+<a href="../assets/images/paracord-images/image-4.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="1.1s"><img src="../assets/images/paracord-images/image-4.jpg" alt="Landing Page"/></a>
+<a href="../assets/images/paracord-images/image-5.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.9s"><img src="../assets/images/paracord-images/image-5.jpg" alt="Landing Page"/></a>
+<a href="../assets/images/paracord-images/image-6.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.7s"><img src="../assets/images/paracord-images/image-6.jpg" alt="Landing Page"/></a>
 
 </aside>
 <!--End of Gallery-->
+
+<!--Review-->
+<aside id="gallery" class="row text-center scrollto clearfix" data-featherlight-gallery
+data-featherlight-filter="a">
+
+
+<div class="section-heading">
+  <h3>ART SPACES</h3>
+  <h2 class="section-title">P A R A C O R D  -  R E V I e W</h2>
+  <p class="section-subtitle"></p>
+</div>
+
+<a href="../assets/images/paracord-images/image-review-6.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.1s"><img src="../assets/images/paracord-images/image-review-6.jpg" alt="Landing Page"/></a>
+<a href="../assets/images/paracord-images/image-review-11.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.3s"><img src="../assets/images/paracord-images/image-review-11.jpg" alt="Landing Page"/></a>
+<a href="../assets/images/paracord-images/image-review-2.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.5s"><img src="../assets/images/paracord-images/image-review-12.jpg" alt="Landing Page"/></a>
+  
+<a href="../assets/images/paracord-images/image-review-13.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="1.1s"><img src="../assets/images/paracord-images/image-review-13.jpg" alt="Landing Page"/></a>
+<a href="../assets/images/paracord-images/image-review-5.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.9s"><img src="../assets/images/paracord-images/image-review-5.jpg" alt="Landing Page"/></a>
+<a href="../assets/images/paracord-images/image-review-10.jpg" data-featherlight="image" class="col-3 wow fadeIn"
+  data-wow-delay="0.7s"><img src="../assets/images/paracord-images/image-review-10.jpg" alt="Landing Page"/></a>
+
+</aside>
+<!--End of Review-->
