--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -33,13 +33,7 @@
                           <a routerLink="/Gallery" (click)="getActiveTab('gallery')" [class.active]="activetab === 'gallery'" >Gallery</a>
                       </li>
                       <li>
-                          <a routerLink="/Services" (click)="getActiveTab('services')" [class.active]="activetab === 'services'" >services</a>
-                      </li>
-                      <li>
-                          <a routerLink="/Testimonials" (click)="getActiveTab('testimonials')" [class.active]="activetab === 'testimonials'" >Testimonials</a>
-                      </li>
-                      <li>
-                          <a routerLink="/Clients" (click)="getActiveTab('clients')" [class.active]="activetab === 'clients'" >clients</a>
+                          <a routerLink="/Testimonials" (click)="getActiveTab('testimonials')" [class.active]="activetab === 'testimonials'" >Product</a>
                       </li>
                       
                   </ul>
